# naval-game

./: .env  .gitattributes  .gitignore  README.md  docker-compose.e2e.yml  docker-compose.yaml
client/: .env.example  .gitignore  Dockerfile  README.md  cypress.config.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
server/: .gitignore  Cargo.toml  Dockerfile  README.md  package.json
server/config/entities/: example-blue-airplane.yaml  example-blue-missile.yaml  example-red-ship.yaml  example-satellite.yaml  example-ship.yaml  gps-15039.yaml  gps-15271.yaml  gps-16129.yaml  gps-19802.yaml  gps-20061.yaml  gps-20185.yaml  gps-20302.yaml  gps-20361.yaml  gps-20452.yaml  gps-20533.yaml  gps-20724.yaml  gps-20830.yaml  gps-20959.yaml  gps-21552.yaml  gps-21890.yaml  gps-21930.yaml  gps-22014.yaml  gps-22108.yaml  gps-22231.yaml  gps-22275.yaml  gps-22446.yaml  gps-22581.yaml  gps-22657.yaml  gps-22700.yaml  gps-22779.yaml  gps-22877.yaml  gps-23027.yaml  gps-23833.yaml  gps-23953.yaml  gps-24320.yaml  gps-24876.yaml  gps-25030.yaml  gps-25933.yaml  gps-26360.yaml  gps-26407.yaml  (+38 more)
server/config/natural-earth/: README.md
server/config/scenarios/: 10s-survive.yaml  example-scenario.yaml  free-play.yaml  scenario-example-gps.yaml
server/src/: domain.rs  dto.rs  earth.rs  ecs.rs  index.js  land_mask.rs  main.rs  movement.rs  scenario.rs  sidc.rs  sim_timing.rs  space.rs  terrain.rs
server/src/data/: sidc_modifier_aliases.json
server/src/units/: altitude.rs  comm.rs  distance.rs  mod.rs
server/test_data/scenarios/: 10s-survive.yaml
(+58 files in other folders)
