[package]
name = "naval-game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
socketioxide = "0.14.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Geo dependencies
geo = "0.28.0"
geo-types = "0.7.13"
uuid = { version = "1.22.0", features = ["v4"] }
