[package]
name = "naval-game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
socketioxide = "0.14.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Geo dependencies
geo = "0.28.0"
geo-types = "0.7.13"
# WGS84 direct / inverse geodesic (Karney); matches client `geographiclib-geodesic`.
geographiclib-rs = "0.2.4"
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.38"
# Two-line element (TLE) / SGP4 satellite propagation (space assets).
sgp4 = "2"

[dev-dependencies]
tempfile = "3"
